fix(ffe-accordion): add gap between button and text

--- a/packages/ffe-accordion/less/ffe-accordion.less
+++ b/packages/ffe-accordion/less/ffe-accordion.less
@@ -50,6 +50,7 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
+        gap: @ffe-spacing-xs;
     }
 
     &__heading-icon-wrapper {
